# FlaskApp

./: .dockerignore  .env.example  .env.staging.example  .env.synology  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  ContainerManagerGuide.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  Progress.md  README.md  SINGLE_SERVER_GUIDE.md  SynologyUsage.md  USAGE.md  asgi.py  babel.cfg  build-release.sh  celerybeat-schedule.bak  celerybeat-schedule.dir  check-celery.sh  config.py  create-release.sh  debug_plantuml.py  debug_simple.py  demo_cdn_configuration.py  demo_storage.py  deploy-synology.sh  docker-compose.synology.yml  docker-compose.yml  frontend.mk  generate_test_html.py  main.py  photonest-20250830-194850.tar.gz.sha256  plantuml_encoding_test.html  plantuml_methods_test.html  plantuml_test.html  (+32 more)
.github/: copilot-instructions.md
.github/workflows/: build.yml  e2e-fullstack.yml  test.yml
app/: __init__.py  config.py  extensions.py
app/admin/: config_view.py  routes.py
app/api/: __init__.py  routes.py
application/: auth_service.py
bounded_contexts/: CLAUDE.md  __init__.py
cli/: README.md  __init__.py  main.py  pyproject.toml
cli/src/: __init__.py
cli/src/celery/: celery_app.py  inspect_tasks.py  logs.py  tasks.py
cli/src/fpv/: cli.py  config.py  db.py  google.py  logs.py  mimeutil.py  repo.py  schema.py  storage.py  sync.py
config/: cors_allowed_origins.example  cors_allowed_origins.txt
core/: __init__.py  celery_settings.py  crypto.py  db.py  db_log_handler.py  lifecycle_logging.py  logging_config.py  picker.py  settings.py  storage_paths.py  storage_service.py  system_settings_defaults.py  time.py  utils.py  version.py
db/: Dockerfile
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  NEXT_STEPS.md  OAUTH_HTTPS_FIX.md  OPERATIONS.md  PHASE_2_3_INTEGRATION_GUIDE.md  PHASE_2_3_SUMMARY.md  Progress.md  REFACTORING_PLAN.md  RUN_MIGRATION.md  SCALABILITY_FIXES_SUMMARY.md  SCALABILITY_ISSUES_AND_FIXES.md  backup_cleanup.md  cdn_integration_guide.md  celery_worker_and_tasks.md  db_reinitialize.md  email_module_architecture.md  email_module_diagram.md  email_module_summary.md  importer_differences.md  local_import_integration_complete.md  local_import_integration_guide.md  local_import_pending_rollback.md  local_import_refactoring.md  local_import_state_management.md  local_import_state_management_deployment.md  local_import_state_management_implementation.md  naming-conventions.md  new_media_model.py  password_reset.md  picker_import_logging.md  requirements.md  screens.md  synology-deployment.md  system_settings_reference.md  test_categorization_summary.md  totp_management.md  version_info.md
flask_smorest/: LICENSE  README.vendored.md  __init__.py  arguments.py  blueprint.py  error_handler.py  etag.py  exceptions.py  fields.py  globals.py  pagination.py  response.py  utils.py
frontend/: .gitignore  DEVELOPMENT.md  eslint.config.js  index.html  package-lock.json  package.json  package.json.cra  playwright.config.ts  playwright.fullstack.config.ts  tsconfig.json  tsconfig.json.cra  vite.config.ts
infrastructure/: base.py  user_repository.py
migrations/: README.md  alembic.ini  env.py
release-20250830-194850/: .dockerignore  .env.production  RELEASE_NOTES.md  USAGE.md  VERSION  deploy.sh  docker-compose.yml  requirements-prod.txt
scripts/: .build.sh  README.md  add_username_to_users.py  bootstrap_system_settings.py  build-remote.sh  build.sh  check_logs.py  check_worktree_clean.sh  demo_cdn_configuration.py  demo_cdn_integration.py  deploy-stg.sh  deploy.sh  entrypoint.sh  fix_redis_aof.sh  generate_version.sh  regenerate_db_baseline.sh  run_db_migrations.py  seed_master_data.py
shared/: __init__.py
synology-deploy/: Dockerfile  SynologyUsage.md  docker-compose.yml  init.sql
tests/: IMPLEMENTATION_CHECKLIST.md  README.md  README_version_tests.md  config.py  conftest.py  manual_test_health.py  manual_test_local_import.py  test_admin_config.py  test_admin_data_files.py  test_admin_groups.py  test_api_auth_check.py  test_api_auth_enforcement.py  test_api_error_localization.py  test_api_login_scope.py  test_api_login_totp.py  test_api_logout.py  test_api_refresh_token.py  test_api_service_account_token_exchange.py  test_api_totp_management.py  test_application_settings.py  test_auth_profile.py  test_auth_role_selection.py  test_auth_service_repository_integration.py  test_auth_utils.py  test_authenticated_principal.py  test_backup_cleanup.py  test_backup_cleanup_tasks.py  test_celery_app.py  test_celery_context.py  test_celery_integration.py  test_cli_config.py  test_cli_google.py  test_collect_local_import_logs_optimization.py  test_cors_configuration.py  test_crypto.py  test_diagrams_output.html  test_diagrams_wiki.md  test_echo_api.py  test_error_logging.py  test_exchange_refresh_token.py  (+78 more)
webapp/: __init__.py  config.py  debug_routes.py  error_handlers.py  extensions.py  health.py  logging_utils.py  timezone.py
(+1434 files in other folders)
