[tool.babel.extractors]
python = { glob = ["**/*.py"] }
jinja2 = { glob = ["**/templates/**/*.html"], extensions = ["jinja2.ext.i18n"] }

[build-system]
requires = ["setuptools>=42"]         # ビルドに必要なパッケージ
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "nolumia"                    # パッケージ名
version = "0.1.0"                      # バージョン
description = "Flask + CLI + Library project"
authors = [
    { name = "kiyoteru hosoda", email = "kiyoteru.hosoda@gmail.com" }
]
    dependencies = [                       # インストール時の依存関係
        "flask",
        "click",
        "PyJWT",
        "flask-smorest",
        "marshmallow",
        "apispec",
        "webauthn"
    ]
requires-python = ">=3.10"

[tool.pytest.ini_options]
markers = [
    "unit: 外部依存のない高速なユニットテスト",
    "integration: 外部リソース（DB、ファイルシステム）を必要とする統合テスト",
    "ffmpeg: FFmpegが必要なテスト（デフォルトでスキップ）",
    "filesystem: 実ファイルシステムアクセスが必要なテスト（デフォルトでスキップ）",
    "smtp: SMTPサーバーが必要なテスト（デフォルトでスキップ）",
]
addopts = [
    "-v",
    "--strict-markers",
    "-m", "not (ffmpeg or filesystem or smtp)",  # デフォルトで外部依存テストをスキップ
]
