[tool.babel.extractors]
python = { glob = ["**/*.py"] }
jinja2 = { glob = ["**/templates/**/*.html"], extensions = ["jinja2.ext.i18n"] }

[build-system]
requires = ["setuptools>=42"]         # ビルドに必要なパッケージ
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "nolumia"                    # パッケージ名
version = "0.1.0"                      # バージョン
description = "FastAPI-based family photo management platform with Celery background jobs"
authors = [
    { name = "kiyoteru hosoda", email = "kiyoteru.hosoda@gmail.com" }
]
    dependencies = [                       # インストール時の依存関係
        "fastapi",
        "uvicorn",
        "click",
        "PyJWT",
        "pydantic",
        "pydantic-settings",
        "webauthn"
    ]
requires-python = ">=3.10"

[tool.pytest.ini_options]
# `pytest`（python -m なし）で実行してもリポジトリルートと cli/src を import 解決
# できるようにする。これが無いと CI で conftest.py の `import shared` が失敗する。
pythonpath = [".", "cli/src"]
markers = [
    "unit: 外部依存のない高速なユニットテスト",
    "integration: 外部リソース（DB、ファイルシステム）を必要とする統合テスト",
    "ffmpeg: FFmpegが必要なテスト（デフォルトでスキップ）",
    "filesystem: 実ファイルシステムアクセスが必要なテスト（デフォルトでスキップ）",
    "smtp: SMTPサーバーが必要なテスト（デフォルトでスキップ）",
]
# tests/manual/ は環境固有のデバッグスクリプトであり、CI では収集しない
norecursedirs = ["tests/manual"]
addopts = [
    "-v",
    "--strict-markers",
    "-m", "not (ffmpeg or filesystem or smtp)",  # デフォルトで外部依存テストをスキップ
    # 同名のテストファイル/ディレクトリ（test_csrf.py 等が複数箇所に存在）が
    # 既定の prepend インポートモードでは衝突し収集エラーになるため、
    # パス単位で一意にモジュール化する importlib モードを使う。
    "--import-mode=importlib",
]
filterwarnings = [
    # テストでは短い HMAC 鍵（jwt-secret 等）を使うため PyJWT が警告を出すが、
    # 本番では十分な長さの鍵を使用するためテスト時のみ無視する。
    "ignore::DeprecationWarning",
]
